PTXprint 1.1.9.2 Release Notes 
28th September 2020

Bug Fixes and Enchancements in: 1.1.9.2

  * Get Decorative PDFs to work reliably
  
  * Auto-update PicList and other config filenames based on new naming standard
  
  * Updated Localization .pot file
  
Bug Fixes and Enchancements in: 1.1.9

  * Fixed Thumb Tabs and improved UI
  
  * Added hanging verses to most poetry markers
  
  * Fixed PicList Editor and loading PicList files
  
  * Fixed wide Footnote/X-ref callers
  
  * Copying Config files
  
  * Fixed Fancy Intro Outline right-leaders (and removed validation of SFM before enabling option)
  
  * Fixed Smart Quotes occuring in picture captions
  
  * Fixed threads from crashing
  
  * Fixed Repeated values in the Thumb Tabs

Bug Fixes and Enchancements in: 1.1.8

  * Fix installer certificate (again!)
  
  * Interface is now localizable (ask for details if you want to contribute a translated interface)
  
  * PicList editor should make it easier to edit parameters (work in progress! plaintext view is currently broken)
  
  * Added preview of illustrations
  
  * Picture Checking questions to encourage thought about illustrations being used (only minimally tested)
  
  * Copyright Credits for illustrations are autogenerated (use \zImageCopyrights to insert into text)
  
  * Thumb Tabs for booknames on outer edge of page
  
  * Added button to Switch to/from Other Diglot project
  
  * The Generate button on the FinalSFM tab in View/Edit now works (without having to Print first)
  
  * Fix truncating books in multi book projects
  
  * Fix to ensure first page has page 1 headers and footers

Bug Fixes and Improvements in: 1.1

  * Last-used Project name and Config settings are now preserved between sessions
  
  * Several improvements to diglot layout (but diglot illustrations are still fragile/experimental)
  
  * Better handling of Headers/Footer - especially for Diglots (specify Pri or Sec formatting)
  