@@ -1,4 +1,4 @@
-PTXprint 1.1.9.2 - AboutPTXprint.txt
+PTXprint 1.1.9.3 - AboutPTXprint.txt
 
 "Bible Layout For Everyone" - A tool to rapidly and easily create scripture PDFs of adequate quality for trial publications
 
